# bonsai

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  example.py  pyproject.toml  setup.py
src/bonsai/: __init__.py  dataframe.py
src/core/: core.c  core.h  dataframe.c  dataframe.h  module.c
src/core/column/: column.h  members.c
src/core/column/dunder/: dealloc.c  init.c
src/core/column/methods/: get_item.c
src/core/dataframe/: dataframe.h  members.c
src/core/dataframe/dunder/: dealloc.c  init.c  repr.c
src/core/dataframe/internal/: df_from_cols.c  find_col.c
src/core/dataframe/methods/: add.c  get_dtype.c  get_item.c  select.c
src/core/dunder/: __dealloc__.c  __init__.c  __repr__.c
