[project]
name = "bonsai"
version = "0.1.0"
description = "A toy DataFrame implementation in C"
readme = "README.md"
authors = [
    { name = "swsxm", email = "129607562+swsxm@users.noreply.github.com" }
]
requires-python = "==3.13"
dependencies = [
    "setuptools>=80.9.0",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5",
]
